--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - npm install
   - cd ../main
 script:
-  - npm run dist-mac
+  - npm run release
 deploy:
   provider: releases
   api_key:
