--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ matrix:
   include:
   - os: osx
     osx_image: xcode9.4
+    language: node_js
     node_js: '10'
     env:
     - ELECTRON_CACHE=$HOME/.cache/electron
